--- a/modalFeature/modalStyles.css
+++ b/modalFeature/modalStyles.css
@@ -277,6 +277,14 @@ input[pattern*="0"] {
   /* transform: translate(0, 10rem); */
 }
 
+.wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 #modal {
   opacity: 0;
   visibility: hidden;
@@ -293,7 +301,10 @@ input[pattern*="0"] {
 
 .outside-btn {
   position: fixed;
-
+  /* if the form element our modal and the <a> outside-btn will be on the same stacking context. according to the html structure, the element that is below/lower in the html order
+  will be on top. thinking giving the <a> outside-btn a lower z-index helped fix that.
+  */
+  z-index: -1;
   top: 0;
   right: 0;
   bottom: 0;
