--- a/accordionForms/accessibleFormStyles.css
+++ b/accordionForms/accessibleFormStyles.css
@@ -109,6 +109,11 @@ body {
   font-family: var(--ff-Josefin);
 }
 
+button {
+  background-color: transparent;
+  border: none;
+}
+
 /* reset */
 
 /* utilities */
@@ -167,4 +172,63 @@ body {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+.accordion-form {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
+.wrapper {
+  min-width: 20em;
+  border: 1px solid red;
+  margin: auto;
+}
+
+/* .wrapper:focus-within {
+  border: 2px dashed blue;
+} */
+
+/* focus ring on container */
+
+.focus {
+  border: 2px solid hsl(216, 94%, 73%);
+}
+
+/* individual sections */
+
+.btn-content {
+  font-size: 1rem;
+}
+
+/* accordion icon */
+
+.accordion-icon {
+  border: solid hsl(0, 0%, 62%);
+  border-width: 0 2px 2px 0;
+  height: 0.5rem;
+  pointer-events: none;
+  position: absolute;
+  right: 2em;
+  top: 50%;
+  transform: translateY(-60%) rotate(45deg);
+  width: 0.5rem;
+}
+
+/* btn border */
+
+[class*="-btn"] {
+  /* display: inline-block; */
+  min-width: 100%;
+  padding: 1em 2em;
+}
+
+/* content section */
+
+.content-container {
+  display: flex;
+  flex-flow: column;
+  border-top: 1px solid lightslategray;
+  border-bottom: 1px solid lightslategray;
 }
