--- a/accordionForms/accessibleFormStyles.css
+++ b/accordionForms/accessibleFormStyles.css
@@ -114,6 +114,15 @@ button {
   border: none;
 }
 
+button:focus {
+  border: 0.2em solid hsl(216, 94%, 73%);
+  border-radius: 0.2em;
+}
+
+input {
+  border: 0.1px solid;
+}
+
 /* reset */
 
 /* utilities */
@@ -174,6 +183,11 @@ button {
   width: 1px;
 }
 
+input,
+.wrapper {
+  border-radius: 0.2rem;
+}
+
 .accordion-form {
   display: flex;
   flex-flow: column;
@@ -182,17 +196,20 @@ button {
 
 .wrapper {
   min-width: 20em;
-  border: 1px solid red;
+  border: 2px solid hsl(0, 0%, 82%);
   margin: auto;
 }
 
 input:focus {
-  outline: 2px solid #000;
+  border: 2px solid #000;
 }
 
 /* .wrapper:focus-within {
   border: 2px dashed blue;
 } */
+
+.focus-ring {
+}
 
 /* focus ring on container */
 
@@ -212,27 +229,46 @@ input:focus {
   position: relative;
 }
 
+/* use outline: offset to separate the outline from the border */
+
 /* accordion icon */
 
 .accordion-icon {
-  border: solid hsl(0, 0%, 62%);
+  border: solid hsl(216, 94%, 73%);
   border-width: 0 2px 2px 0;
   /* without the position: absolute declaration, our icon will be a line */
   position: absolute;
   transform: rotate(45deg);
-  top: 0.18rem;
-  left: 15em;
+  top: 0.1rem;
+  left: 14em;
   margin: 0 0 0 auto;
   height: 0.5rem;
   width: 0.5rem;
 }
 
+/* h3 button */
+
 /* btn border */
+
+.toggle-heading {
+  padding: 1.3em 1.5em;
+}
+
+article:nth-of-type(1) h3 {
+  border-bottom: 1px solid lightslategray;
+}
+
+article:nth-of-type(2) h3 {
+  border-top: 1px solid lightslategray;
+}
+
+article:nth-of-type(3) h3 {
+  border-top: 1px solid lightslategray;
+}
 
 [class*="-btn"] {
   /* display: inline-block; */
   min-width: 100%;
-  padding: 1.3em 1.5em;
 }
 
 /* content section */
@@ -240,8 +276,6 @@ input:focus {
 .content-container {
   display: flex;
   flex-flow: column;
-  border-top: 1px solid lightslategray;
-  border-bottom: 1px solid lightslategray;
   padding: 2.5em 1.5em;
 }
 
