--- a/accordionForms/accessibleFormStyles.css
+++ b/accordionForms/accessibleFormStyles.css
@@ -258,8 +258,12 @@ input:focus {
   padding: 1.3em 1.5em;
 }
 
+.toggle-heading:hover {
+  background-color: hsl(216, 94%, 94%);
+}
+
 article:nth-of-type(1) h3 {
-  border-bottom: 1px solid lightslategray;
+  /* border-bottom: 1px solid lightslategray; */
 }
 
 article:nth-of-type(2) h3 {
@@ -274,6 +278,22 @@ article:nth-of-type(3) h3 {
   /* display: inline-block; */
   min-width: 100%;
 }
+
+.toggle-heading[aria-expanded="true"] {
+  border-bottom: 1px solid lightslategray;
+}
+
+/* show/hide content */
+
+h3[aria-expanded="true"] ~ .content-container {
+  display: flex;
+}
+
+h3[aria-expanded="false"] ~ .content-container {
+  display: none;
+}
+
+/* show/hide content */
 
 /* content section */
 
